# vm-virtio

crates/devices/virtio-blk/: Cargo.toml
crates/devices/virtio-console/: Cargo.toml
crates/devices/virtio-vsock/: Cargo.toml
crates/virtio-device/: Cargo.toml
crates/virtio-queue/: Cargo.toml
crates/virtio-queue-ser/: Cargo.toml
