[package]
name = "virtio-vsock"
version = "0.3.1"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio vsock device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio", "vsock"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
# The `path` part gets stripped when publishing the crate.
virtio-queue = { path = "../../virtio-queue" }
virtio-bindings = { path = "../../virtio-bindings", version = "0.2.0" }
vm-memory = { git = "https://github.com/vireshk/vm-memory", branch = "next" }

[dev-dependencies]
virtio-queue = { path = "../../virtio-queue", features = ["test-utils"] }
vm-memory = { git = "https://github.com/vireshk/vm-memory", branch = "next", features = ["backend-mmap", "backend-atomic"] }
